Selected mask points don't stand out visually. #41333

Closed
opened 2014-08-05 23:45:17 +02:00 by Michael P. · 6 comments

System Information
Windows 7 64bit
NVIDIA GeForce GTX 760

Blender Version
Broken: blender-2.71
Worked: blender-2.70a

Short description of error
Selected mask points don't stand out visually.
Only current mask point stands out visually.
So it's impossible to see which points are selected, and which are not.

Exact steps for others to reproduce the error

  • open the uv editor
  • select mode "Mask"
  • ctrl + lmb several times to create a mask spline with several points
  • select more than one point, i.e. with circle select

Note: The points are selected, and can be draged around, but it's visually unclear which ones
are selected.

I have attached three images. The smallest one shows the expected behaviour which is
known from Blender 2.70a and older.

Blender 2.71
blender-2.71-selection-unclear-2.jpg

blender-2.71-selection-unclear-1.jpg

Blender 2.70a and older
blender-2.70a-selection.jpg

**System Information** Windows 7 64bit NVIDIA GeForce GTX 760 **Blender Version** Broken: blender-2.71 Worked: blender-2.70a **Short description of error** Selected mask points don't stand out visually. Only current mask point stands out visually. So it's impossible to see which points are selected, and which are not. **Exact steps for others to reproduce the error** - open the uv editor - select mode "Mask" - ctrl + lmb several times to create a mask spline with several points - select more than one point, i.e. with circle select Note: The points are selected, and can be draged around, but it's visually unclear which ones are selected. I have attached three images. The smallest one shows the expected behaviour which is known from Blender 2.70a and older. Blender 2.71 ![blender-2.71-selection-unclear-2.jpg](https://archive.blender.org/developer/F101556/blender-2.71-selection-unclear-2.jpg) ![blender-2.71-selection-unclear-1.jpg](https://archive.blender.org/developer/F101554/blender-2.71-selection-unclear-1.jpg) Blender 2.70a and older ![blender-2.70a-selection.jpg](https://archive.blender.org/developer/F101553/blender-2.70a-selection.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-08-06 14:35:05 +02:00

This issue was referenced by ab8bcd4038

This issue was referenced by ab8bcd4038763aeb95b4b956abbafac2a1de0e1b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ab8bcd4038.

Closed by commit ab8bcd4038.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41333
No description provided.